--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -1,5 +1,5 @@
 <section class="section-collection">      
-    <div class="container collection">
+    <div class="collection">
         <img class="collection-elements" 
         srcset="./img/our-collection/element-collection-desktop.png 337w,
                 ./img/our-collection/element-collection-mob.png 199w"       
