--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container header-container">
     <nav class="header-nav">
-      <a class="header-logo" href="../index.html"
+      <a class="header-logo" href="./index.html"
         ><img
           src="./img/icons/logo.svg"
           alt="Logo image"
