--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -34,7 +34,7 @@
         ></textarea>
         <button type="submit" class="submit-order-arrow">
           SEND
-          <svg class="send-icon__order" width="26" height="19">
+          <svg class="icon-order" width="26" height="19">
             <use href="./img/icons/symbol-defs.svg#icon-arow"></use>
           </svg>
         </button>
