--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -24,7 +24,7 @@
   font-size: 14px;
   line-height: 1.3;
   text-transform: uppercase;
-  transition: color 250ms ease-in-out;
+  transition: color 250ms ease-in-out, font-size 250ms ease-in-out;
 }
 .footer-paragraph {
   color: #fcf9f9;
@@ -42,6 +42,11 @@
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
+}
+.footer-link:hover,
+.footer-link:focus {
+  color: #ecd979;
+  font-size: 18px;
 }
 @media screen and (min-width: 375px) {
   .footer-paragraph {
@@ -82,9 +87,5 @@
   }
   .footer::before {
     content: url(../img/footer-img/footer-element-comp.png);
-  }
-  .footer-link:hover,
-  .footer-link:focus {
-    color: #ecd979;
   }
 }
