--- a/src/css/header.css
+++ b/src/css/header.css
@@ -75,7 +75,7 @@
     font-weight: 400;
     line-height: 1.3;
     text-transform: uppercase;
-    transition: color 250ms ease-in-out;
+    transition: color 250ms ease-in-out, font-size 350ms ease-in-out;
   }
   .header-tel-link {
     color: var(--white, #fcf9f9);
@@ -102,5 +102,6 @@
   .header-link:hover,
   .header-link:focus {
     color: #ecd979;
+    font-size: 16px;
   }
 }
