--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -1,3 +1,7 @@
+.testimonials-card:hover,
+.testimonials-card:focus {
+  border: 2px solid rgba(252, 249, 249, 0.1);
+}
 @media screen and (max-width: 767px) {
   .testimonials-card.sergey {
     display: none;
@@ -34,6 +38,7 @@
   height: 100%;
   border-radius: 4px;
   border: 1px solid rgba(252, 249, 249, 0.1);
+  transition: border 250ms ease-in-out;
 }
 
 .img-testimonials {
