--- a/src/css/mobail-menu.css
+++ b/src/css/mobail-menu.css
@@ -11,7 +11,7 @@
     z-index: 9999999;
     padding-top: 20px;
     transform: translateX(100%);
-    transition: transform 250ms;
+    transition: transform 0.7s cubic-bezier(0.5, -0.21, 0.37, 0.96);
   }
 
   .is-open {
@@ -85,7 +85,7 @@
     z-index: 9999999;
     padding-top: 20px;
     transform: translateX(100%);
-    transition: transform 250ms;
+    transition: transform 0.7s cubic-bezier(0.5, -0.21, 0.37, 0.96);
   }
 
   .is-open {
